Changed footer text position to fix icon placement on iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,7 @@ img{
     padding-top: 40px;
     background-color: #64485c;
     color: #fafafa;
+    position: relative;
 }
 
 .footer-text p{
